# frunk-enum

./: CHANGELOG  Cargo.toml  README.md  bors.toml
.github/: dependabot.yml
.github/workflows/: dco.yaml  rust.yml
core/: Cargo.toml
core/src/: lib.rs
derive/: Cargo.toml
derive-tests/: Cargo.toml  DCO  LICENSE-APACHE-2.0
derive-tests/src/: lib.rs
derive/src/: lib.rs
src/: lib.rs
