[package]
name = "frunk-enum-core"
version = "0.3.0"
authors = ["Metaswitch Networks Ltd"]
edition = "2021"
description = "Implemenation of genericized enums for use with frunk"
documentation = "https://docs.rs/frunk-enum-core"
repository = "https://github.com/Metaswitch/frunk-enum"
license = "MIT OR Apache-2.0"

[badges.travis-ci]
repository = "Metaswitch/frunk-enum"

[dependencies]
frunk = "0.4"
