[package]
name = "frunk-enum-derive"
version = "0.2.0"
authors = ["Metaswitch Networks Ltd"]
edition = "2018"
description = "Derive macros to implement the frunk::LabelledGeneric trait on enums"
documentation = "https://docs.rs/frunk-enum-derive"
repository = "https://github.com/Metaswitch/frunk-enum"
license = "MIT OR Apache-2.0"

[badges.travis-ci]
repository = "Metaswitch/frunk-enum"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.29", features = ["full"] }
proc-macro2 = "0.4.27"
quote = "1.0.3"
itertools = "0.8.0"
frunk_proc_macro_helpers = "0.0.3"
