[package]
name = "frunk-enum-derive"
version = "0.2.1"
authors = ["Metaswitch Networks Ltd"]
edition = "2018"
description = "Derive macros to implement the frunk::LabelledGeneric trait on enums"
documentation = "https://docs.rs/frunk-enum-derive"
repository = "https://github.com/Metaswitch/frunk-enum"
license = "MIT OR Apache-2.0"

[badges.travis-ci]
repository = "Metaswitch/frunk-enum"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["full"] }
proc-macro2 = "0.4"
quote = "0.6"
itertools = "0.10"
frunk_proc_macro_helpers = "0.0.5"

[dev-dependencies]
frunk-enum-core = { version = "0.2.1", path = "../core" }
frunk = "0.4.1"
frunk_core = "0.3.1"
