[package]
name = "frunk-enum-derive"
version = "0.3.0"
authors = ["Metaswitch Networks Ltd"]
edition = "2021"
description = "Derive macros to implement the frunk::LabelledGeneric trait on enums"
documentation = "https://docs.rs/frunk-enum-derive"
repository = "https://github.com/Metaswitch/frunk-enum"
license = "MIT OR Apache-2.0"

[badges.travis-ci]
repository = "Metaswitch/frunk-enum"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
itertools = "0.12"
frunk_proc_macro_helpers = "0.1"

[dev-dependencies]
frunk-enum-core = { version = "0.3.0", path = "../core" }
frunk = "0.4.1"
frunk_core = "0.4.1"
syn = { version = "1.0", features = ["full"] }
